--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -2,11 +2,16 @@
     height: 100vh;
     flex: 0.2;
     color: white;
+    overflow-y: overlay;
     padding-left: 10px;
     padding-right: 10px;
     min-width: 230px;
     height: 100vh;
     background-color:#040404;
+}
+
+.sidebar::-webkit-scrollbar{
+    display: none;
 }
 
 .sidebar__logo {
